--- a/template.html
+++ b/template.html
@@ -18,7 +18,7 @@
   <h1>MEOW! GARY</h1>
 
   <!-- add image of gary with funny text bubble: -->
-  <img src="">
+  <img src="https://i.imgur.com/xXcVqcSl.jpg">
 
   <p>Hi, I'm Gary the cat, and my mission is simple: I am collecting donations for a local shelter to help other less fortunate kitties and pups.</p>
   <p>If everyone stumbling on this site donates 1 penny we will drastically improve the lives of kittens and pups in Portland.</p>
