added style.css with some basic stylingD

--- a/template.html
+++ b/template.html
@@ -8,13 +8,12 @@
   <meta name="description" content="Gary">
   <meta name="author" content="Simon F">
 
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="style.css">
 
 </head>
 
 <body>
-  <script src="js/scripts.js"></script>
-
   <h1>MEOW! GARY</h1>
 
   <!-- add image of gary with funny text bubble: -->
@@ -36,6 +35,9 @@
 
   <p>this project is based off of quite possibly the most inspirational quote of our lifetime:</p>
   <p>"meow!" -gary</p> 
+
+  <!-- Add font awesome icons -->
+  <a href="#" class="fa fa-instagram"></a>
 
 </body>
 </html>
