more style changes

--- a/template.html
+++ b/template.html
@@ -24,7 +24,7 @@
     <p>
       <br>Hi, I'm Gary the cat, and my mission is simple: I am collecting donations for a local shelter to help other less fortunate kitties and pups.
       <br>If everyone stumbling on this site donates 1 penny we will drastically improve the lives of kittens and pups in Portland.
-      <br>100% of donations go to the Pixie Project, a Portland familly-owned rescue animal shelter.
+      <br><b>100% of donations go to the Pixie Project, a Portland family-owned rescue animal shelter.</b>
     </p>
 
     <div class='donate'>
@@ -44,10 +44,10 @@
     </div>
 
     <p>This project is based off of quite possibly the most inspirational quote of our lifetime:</p>
-    <p>"meow!" -gary</p> 
+    <p>"meow!" -Gary</p> 
 
     <!-- Add font awesome icons -->
-    <a href="#" class="fa fa-instagram"></a>
+    <a href="https://www.instagram.com/eaglesnesthawthorne/" class="fa fa-instagram"></a>
   </div>
 
 </body>
