--- a/template.html
+++ b/template.html
@@ -22,7 +22,7 @@
     <img src="https://i.imgur.com/xXcVqcSl.jpg">
 
     <p>
-      <br>Hi, I'm Gary the cat, and my mission is simple: I am collecting donations for a local shelter to help other less fortunate kitties and pups.
+      <br>Hi, glad you found my site! I'm Gary, and my mission is simple: I am collecting donations for a local shelter to help other less fortunate kitties and pups.
       <br>If everyone stumbling on this site donates 1 penny we will drastically improve the lives of kittens and pups in Portland.
       <br><b>100% of donations go to the Pixie Project, a Portland family-owned rescue animal shelter.</b>
     </p>
@@ -37,17 +37,27 @@
 
       <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
       <input type="hidden" name="cmd" value="_s-xclick" />
+      <input type="hidden" name="hosted_button_id" value="BRHAAUDKZ2FSL" />
+      <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+      <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
+      </form>
+     <!--  <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+      <input type="hidden" name="cmd" value="_s-xclick" />
       <input type="hidden" name="hosted_button_id" value="S9WJ8MS5LVRBY" />
       <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
       <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
-      </form>
+      </form> -->
+    </div>
+    <p>This project is based off of quite possibly the most inspirational quote of our lifetime:</p>
+    <div class='quote'>
+      <p>"meow!" -Gary</p> 
     </div>
 
-    <p>This project is based off of quite possibly the most inspirational quote of our lifetime:</p>
-    <p>"meow!" -Gary</p> 
-
-    <!-- Add font awesome icons -->
-    <a href="https://www.instagram.com/eaglesnesthawthorne/" class="fa fa-instagram"></a>
+    <div class="social_media">
+      <!-- Add font awesome icons -->
+      <a href="https://www.instagram.com/eaglesnesthawthorne/" class="fa fa-instagram"></a>
+      <a href="https://www.facebook.com/gary.chaton.7" class ="fa fa-facebook"></a> 
+    </div>
   </div>
 
 </body>
