added Js image randomizer

--- a/template.html
+++ b/template.html
@@ -19,17 +19,20 @@
     <h1>MEOW!GARY</h1>
 
     <!-- add image of gary with funny text bubble: -->
-    <img src="https://i.imgur.com/xXcVqcSl.jpg">
+    <!-- <img src="https://i.imgur.com/xXcVqcSl.jpg"> -->
+    <!-- <img src="https://i.imgur.com/lSQFZnlh.jpg"> -->
+    <!-- call js img randomizer to add rando image of gary with funny text bubble: -->
+    <script src="./image_randomizer.js"></script>
 
     <p>
       <br>Hi, glad you found my site! I'm Gary, and my mission is simple: I am collecting donations for a local shelter to help other less fortunate kitties and pups.
-      <br>If everyone stumbling on this site donates 1 penny we will drastically improve the lives of kittens and pups in Portland.
+      <br>If everyone stumbling on this site donates pennies we will drastically improve the lives of kittens and pups in Portland.
       <br><b>100% of donations go to the Pixie Project, a Portland family-owned rescue animal shelter.</b>
     </p>
 
     <div class='donate'>
       <p>
-        Donate your pennies below (redirects to PayPal):
+        Donate your pennies below (via PayPal):
       </p>
 
     <!-- paypall button for donation with any amount -->
