--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@
     <h1>MEOW!GARY</h1>
 
     <!-- add image of gary with funny text bubble: -->
-    <!-- <img src="https://i.imgur.com/xXcVqcSl.jpg"> -->
-    <!-- <img src="https://i.imgur.com/lSQFZnlh.jpg"> -->
     <!-- call js img randomizer to add rando image of gary with funny text bubble: -->
     <script src="./image_randomizer.js"></script>
 
@@ -41,7 +39,7 @@
       <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
       <input type="hidden" name="cmd" value="_s-xclick" />
       <input type="hidden" name="hosted_button_id" value="BRHAAUDKZ2FSL" />
-      <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+      <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" title="PayPal - The safer way to donate online!" alt="Donate with PayPal button" />
       <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
       </form>
      <!--  <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
