added phone icon, new donate button

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <div class='donate'>
       <p>
-        Donate your pennies below (via PayPal):
+        Donate your pennies below:
       </p>
 
     <!-- paypall button for donation with any amount -->
@@ -39,7 +39,7 @@
       <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
       <input type="hidden" name="cmd" value="_s-xclick" />
       <input type="hidden" name="hosted_button_id" value="BRHAAUDKZ2FSL" />
-      <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" title="PayPal - The safer way to donate online!" alt="Donate with PayPal button" />
+      <input type="image" src="https://i.imgur.com/VVL9Idy.png" border="0" name="submit" title="PayPal - The safer way to donate online!" alt="Donate with PayPal button" />
       <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
       </form>
      <!--  <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
@@ -56,8 +56,9 @@
 
     <div class="social_media">
       <!-- Add font awesome icons -->
-      <a href="https://www.instagram.com/eaglesnesthawthorne/" class="fa fa-instagram"></a>
+      <a href="https://www.instagram.com/meowgarythecat/" class="fa fa-instagram"></a>
       <a href="https://www.facebook.com/gary.chaton.7" class ="fa fa-facebook"></a> 
+      <a href="tel:415-342-3705" class ="fa fa-phone"></a> 
     </div>
   </div>
 
