covid banner js, other covid changes WIP

--- a/index.html
+++ b/index.html
@@ -12,13 +12,22 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="style.css">
 
+
+
 </head>
 
 <body>
+  <!-- add covid banner -->
+  <div
+  data-component="dismissible-item"
+  data-type="info"
+  data-value="<strong>ATTN: Due to COVID-19, please help me and my loved ones stay safe by keeping the petting to a minimum, and not allowing me in your house. Much love and stay safe!</strong>"
+  ></div>
+  <script src="./covid_banner.js"></script>
+  
   <div class="content">
     <h1>MEOW!GARY</h1>
 
-    <!-- add image of gary with funny text bubble: -->
     <!-- call js img randomizer to add rando image of gary with funny text bubble: -->
     <script src="./image_randomizer.js"></script>
 
