--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <!-- add covid banner -->
   <div
   data-component="dismissible-item"
-  data-value="<strong>ATTN: Due to COVID-19, please help me and my loved ones stay safe by keeping the petting to a minimum, and not allowing me in your house. Much love and stay safe!</strong>"
+  data-value="<strong>ATTN: Due to COVID-19, please help me and my loved ones stay safe by keeping the petting to a minimum, and not allowing me in your house. Much love and stay safe! -Gary</strong>"
   ></div>
   <script src="./covid_banner.js"></script>
   
