dismissible-banner to make it more clear

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
   <!-- add covid banner -->
   <div
-  data-component="dismissible-item"
+  data-component="dismissible-banner"
   data-value="<strong>ATTN: Due to COVID-19, please help me and my loved ones stay safe by keeping the petting to a minimum, and not allowing me in your house. Much love and stay safe! -Gary</strong>"
   ></div>
   <script src="./covid_banner.js"></script>
